--- a/src/App.css
+++ b/src/App.css
@@ -13,10 +13,26 @@ li {
   border: 1px solid #fff;
 }
 
+label {
+  display: block;
+}
+
+p {
+  margin: 0;
+  margin-left: 1rem;
+}
+
 .card {
   padding: 2em;
 }
 
-.read-the-docs {
-  color: #888;
+.observation {
+  display: flex;
+  flex-direction: row;
+  background-color: #fff;
+  color: #000;
+  text-align: left;
+  margin: 1rem;
+  padding: 1rem;
+  border-radius: 5px;
 }
