--- a/src/App.css
+++ b/src/App.css
@@ -22,8 +22,17 @@ p {
   margin-left: 1rem;
 }
 
-.card {
-  padding: 2em;
+select {
+  background-color: #fff;
+  color: rgba(128, 71, 51, 0.87);
+  padding: 0.5rem;
+  margin: 0.5rem;
+  border: 1px solid rgba(128, 71, 51, 0.5);
+  border-radius: 5px;
+}
+
+.inputs {
+  /* padding: 1em; */
 }
 
 .observation {
@@ -35,4 +44,10 @@ p {
   margin: 1rem;
   padding: 1rem;
   border-radius: 5px;
+}
+
+.flex {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
 }
