--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,6 @@
   max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
-  text-align: center;
 }
 
 ul {
@@ -39,7 +38,7 @@ input[type="date"]::-webkit-calendar-picker-indicator {
 
 .observation {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   background-color: #fff;
   color: #000;
   text-align: left;
@@ -52,4 +51,8 @@ input[type="date"]::-webkit-calendar-picker-indicator {
   display: flex;
   flex-direction: row;
   justify-content: center;
+}
+
+.location {
+  font-size: 0.8rem;
 }
