--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,11 @@
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: 'Lora', serif;
   line-height: 1.5;
   font-weight: 400;
+  font-size: 100%;
   color-scheme: light dark;
   color: rgba(26, 86, 224, 0.87);
-  background-color: #b5dfff;
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  background-color: #e2fce5;
 }
 
 a {
