--- a/src/App.css
+++ b/src/App.css
@@ -181,3 +181,7 @@ input[type="date"]::-webkit-calendar-picker-indicator {
   font-size: 1.5rem;
   /* color: #4C403D; */
 }
+
+.selected {
+  background-color: aqua;
+}
