--- a/src/App.css
+++ b/src/App.css
@@ -27,6 +27,11 @@ button {
   color: #4C403D;
 }
 
+button:focus {
+  outline: 1px solid #000;
+  border-radius: 0;
+}
+
 ul {
   list-style-type: none;
 }
@@ -58,6 +63,11 @@ input {
   border-radius: 0;
   width: 175px;
   box-sizing: border-box;
+}
+
+select:focus {
+  outline: 1px solid #000;
+  border-radius: 0;
 }
 
 /* option {
@@ -146,6 +156,7 @@ input[type="date"]::-webkit-calendar-picker-indicator {
   display: flex;
   overflow-x: scroll;
   font-size: 1.3rem;
+  padding: 2rem;
 }
 
 .date-day {
@@ -183,5 +194,11 @@ input[type="date"]::-webkit-calendar-picker-indicator {
 }
 
 .selected {
-  background-color: aqua;
+  background-color: #C2DFAC;
+}
+
+.selected:focus {
+  /* /* border: 2px solid #fff; */
+  outline: 1px solid #000;
+  border-radius: 0;
 }
