--- a/src/App.css
+++ b/src/App.css
@@ -202,3 +202,11 @@ input[type="date"]::-webkit-calendar-picker-indicator {
   outline: 1px solid #000;
   border-radius: 0;
 }
+
+.checklist {
+  background-color: #fff;
+  height: 100%;
+  width: 400px;
+  position: absolute;
+  right: 0;
+}
