--- a/src/App.css
+++ b/src/App.css
@@ -31,10 +31,6 @@ ul {
   list-style-type: none;
 }
 
-li {
-  border: 1px solid #fff;
-}
-
 label {
   display: block;
 }
@@ -64,10 +60,6 @@ select:focus {
   outline: 1px solid #000;
   border-radius: 0;
 }
-
-/* option {
-  min-height: 0;
-} */
 
 input[type="date"]::-webkit-calendar-picker-indicator {
   background-color: #000;
@@ -150,30 +142,34 @@ input[type="date"]::-webkit-calendar-picker-indicator {
 .bird-container {
   display: flex;
   overflow-x: scroll;
+  overflow-y: scroll;
+  max-height: calc(100vh - 112px);
 }
 
 .date-container {
   display: flex;
   overflow-x: scroll;
   font-size: 1.3rem;
-  padding: 0 2rem;
   flex-direction: column;
-  /* background-color: #fff;
-  border-radius: 8px; */
-  margin: 2rem;
 }
 
 .dates {
   display: flex;
   overflow-x: scroll;
+  padding-left: 0 1rem;
 }
 
 .date-day {
-  /* background-color: #fff;
-  border-radius: 8px; */
-  min-width: 400px;
-  /* margin: 0 2rem; */
-  /* padding: 1rem; */
+  min-width: 200px;
+  background-color: #fff;
+  border-radius: 5px;
+  margin: 1rem;
+  padding: 1rem;
+}
+
+.date-day:hover {
+  box-shadow: 0px 1px 5px #8b8b8b;
+  transition: 0.25s;
 }
 
 .date-heading {
@@ -181,12 +177,11 @@ input[type="date"]::-webkit-calendar-picker-indicator {
   font-weight: 400;
   font-style: normal;
   font-size: 1.25rem;
-  /* color: #2885F3; */
   margin-left: 1rem;
 }
 
 .date-locations {
-  columns: 3;
+  columns: 2;
 }
 
 .date-location {
@@ -208,7 +203,8 @@ input[type="date"]::-webkit-calendar-picker-indicator {
 }
 
 .date-detail {
-  background-color: #fff;
+  /* background-color: #fff; */
+  padding: 2rem;
 }
 
 .selected {
@@ -216,7 +212,6 @@ input[type="date"]::-webkit-calendar-picker-indicator {
 }
 
 .selected:focus {
-  /* /* border: 2px solid #fff; */
   outline: 1px solid #000;
   border-radius: 0;
 }
@@ -227,6 +222,7 @@ input[type="date"]::-webkit-calendar-picker-indicator {
   width: 400px;
   position: absolute;
   right: 0;
+  overflow-y: scroll;
 }
 
 .location-container {
