--- a/src/App.css
+++ b/src/App.css
@@ -10,9 +10,10 @@ header {
   width: 100%;
   display: flex;
   align-items: center;
+  position: sticky;
 }
 
-header:hover {
+h1:hover {
   cursor: pointer;
   transition: all 0.2s;
   color: #2885F3
@@ -259,7 +260,7 @@ input[type="date"]::-webkit-calendar-picker-indicator {
 }
 
 .date-detail {
-  width: 70%;
+  flex-grow: 1;
   padding: 2rem;
   overflow-y: scroll;
 }
