--- a/src/App.css
+++ b/src/App.css
@@ -121,6 +121,10 @@ input[type="date"]::-webkit-calendar-picker-indicator {
 }
 
 /** CONTAINERS? LAYOUT? **/
+.content {
+  height: 100%;
+}
+
 .obs-container {
   display: flex;
   flex-direction: row;
@@ -202,7 +206,6 @@ input[type="date"]::-webkit-calendar-picker-indicator {
 
 .dates {
   overflow-y: scroll;
-  padding-left: 0 1rem;
   border-right: 2px solid #fff;
 }
 
@@ -361,4 +364,5 @@ input[type="date"]::-webkit-calendar-picker-indicator {
 
 .picker:hover {
   box-shadow: 0px 2px 2px 1px rgb(0 0 0 / 20%);
+  cursor: pointer;
 }
