--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,15 @@
   font-size: 100%;
   color: #4C403D;
   background-color: #E6F0DE;
+  --main-bg: #e6f0de;
+  --header-bg: #3d5732;
+  --accent: #535bf2;
+  --light-link: #b2d1ff;
+  --focus: #fff;
+  --btn-select-bg: #c2dfac;
+  --light: #fff;
+  --dark: #000;
+  --medium: #666;
 }
 
 a {
@@ -14,7 +23,7 @@ a {
 }
 
 a:hover {
-  color: #535bf2;
+  color: var(--link);
 }
 
 body {
