--- a/src/App.css
+++ b/src/App.css
@@ -136,7 +136,7 @@ select:hover {
 
 /** CONTAINERS? LAYOUT? **/
 .content {
-  height: 100%;
+  /* height: 100%; */
   position: relative;
   top: 62px;
   transition: 1s;
@@ -414,4 +414,37 @@ select:hover {
   font-weight: 400;
   font-size: 1.5rem;
   font-style: italic;
+}
+
+/* HTML: <div class="loader"></div> */
+.loader {
+  height: 40px;
+  aspect-ratio: 1.5;
+  --c: no-repeat linear-gradient(var(--accent) 0 0);
+  background: var(--c), var(--c);
+  background-size: 66% 50%;
+  animation: l1 1.5s infinite linear;
+}
+
+@keyframes l1 {
+  0% {
+    background-position: 0 0, 0 100%
+  }
+
+  25% {
+    background-position: 100% 0, 0 100%
+  }
+
+  47%,
+  53% {
+    background-position: 100% 0, 100% 100%
+  }
+
+  75% {
+    background-position: 0 0, 100% 100%
+  }
+
+  100% {
+    background-position: 0 0, 0 100%
+  }
 }
