--- a/src/App.css
+++ b/src/App.css
@@ -416,35 +416,42 @@ select:hover {
   font-style: italic;
 }
 
-/* HTML: <div class="loader"></div> */
-.loader {
-  height: 40px;
-  aspect-ratio: 1.5;
-  --c: no-repeat linear-gradient(var(--accent) 0 0);
-  background: var(--c), var(--c);
-  background-size: 66% 50%;
-  animation: l1 1.5s infinite linear;
+/** LOADER **/
+.loader-container {
+  height: 80vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-@keyframes l1 {
-  0% {
-    background-position: 0 0, 0 100%
-  }
+.loader {
+  width: 50px;
+  aspect-ratio: 1;
+  border-radius: 50%;
+  border: 8px solid var(--focus);
+  border-right-color: var(--header-bg);
+  animation: l2 1s infinite linear;
+}
 
-  25% {
-    background-position: 100% 0, 0 100%
+@keyframes l2 {
+  to {
+    transform: rotate(1turn)
   }
+}
 
-  47%,
-  53% {
-    background-position: 100% 0, 100% 100%
-  }
+/** ERROR MESSAGE **/
+.error-container {
+  display: flex;
+  justify-content: center;
+  padding-top: 3rem;
+}
 
-  75% {
-    background-position: 0 0, 100% 100%
-  }
-
-  100% {
-    background-position: 0 0, 0 100%
-  }
+.error {
+  border: 3px solid var(--error);
+  font-family: 'Merriweather', serif;
+  padding: 1rem;
+  background-color: var(--error-bg);
+  border-radius: 5px;
+  box-shadow: 0px 2px 2px 1px rgb(0 0 0 / 20%);
+  text-align: center;
 }
