--- a/src/index.css
+++ b/src/index.css
@@ -10,7 +10,7 @@
   --accent: #535bf2;
   --light-link: #b2d1ff;
   --focus: #fff;
-  --btn-select-bg: #c2dfac;
+  --btn-select-bg: #e0c577;
   --light: #fff;
   --dark: #000;
   --medium: #666;
