--- a/src/App.css
+++ b/src/App.css
@@ -288,6 +288,26 @@ header {
   transition: 0.5s;
 }
 
+.bird-scroll-to-top {
+  position: fixed;
+  bottom: 3rem;
+  right: 3rem;
+  background-color: var(--accent);
+  color: var(--light);
+  padding: 1rem;
+}
+
+.bird-scroll-to-top:hover {
+  cursor: pointer;
+  box-shadow: 0px 1px 3px #949494;
+  transition: 0.1s;
+}
+
+.bird-scroll-to-top:hover svg {
+  transition: 0.5s;
+  transform: translateY(-3px);
+}
+
 /** DATE VIEW **/
 .date-container {
   display: flex;
